# AIStudioProxy

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
configs/: config.yaml
docker/: Dockerfile  supervisord.conf
docs/: TODO.md  development.md  user_guide.md
scripts/: health_monitor.py  start.sh
src/: main.py
src/aistudioproxy/: __init__.py  main.py
src/aistudioproxy/api/: app.py  middleware.py  models.py  routes.py  security.py
src/aistudioproxy/browser/: manager.py  page_controller.py
src/aistudioproxy/core/: handler.py
src/aistudioproxy/services/: keep_alive.py
src/aistudioproxy/utils/: config.py  logger.py  response_formatter.py  retry.py
src/api/: __init__.py  app.py  middleware.py  models.py  routes.py  security.py
src/browser/: __init__.py  manager.py  page_controller.py
src/core/: __init__.py  handler.py
src/services/: keep_alive.py
src/utils/: __init__.py  config.py  logger.py  response_formatter.py
tests/: __init__.py  conftest.py  test_integration.py  test_main.py
tests/api/: __init__.py  test_app.py  test_routes.py  test_security.py
tests/browser/: test_manager.py  test_page_controller.py
tests/core/: test_handler.py
tests/services/: test_keep_alive.py
tests/utils/: __init__.py  test_config.py  test_logger.py  test_retry.py
